[tool.poetry]
name = "behaving"
version = "3.1.1"
description = "BDD Behavior-Driven-Development testing"
authors = ["Yiorgis Gozadinos <ggozadinos@gmail.com>"]
license = "GPL"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"
]
keywords = ["BDD", "Behavior-Driven-Development", "testing"]
repository = "https://github.com/ggozad/behaving"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
parse = "^1.19.0"
behave = "^1.2.6"
splinter = "^0.18.1"
selenium = "^4"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
pdbpp = "^0.10.3"

[tool.poetry.scripts]
mailmock = "behaving.mail.mock:main"
smsmock = "behaving.sms.mock:main"
gcmmock = "behaving.notifications.gcm.mock:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.117"

[tool.ruff]

line-length = 88

# Enable Flake's "E" and "F" codes by default and "I" for sorting imports.
select = ["E", "F", "I"]
ignore = ["E501"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".nox",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {"__init__.py"=["F401","F403"], "steps.py"=["F401","F403"],"css.py"=["E731"]}

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
